// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<Fragment>
  <TextField
    InputLabelProps={
      Object {
        "id": "undefined-label",
        "shrink": undefined,
      }
    }
    error={false}
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    inputProps={
      Object {
        "aria-labelledby": "undefined-label",
      }
    }
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<Fragment>
  <TextField
    InputLabelProps={
      Object {
        "id": "undefined-label",
        "shrink": undefined,
      }
    }
    className="requiredField"
    error={false}
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    inputProps={
      Object {
        "aria-labelledby": "undefined-label",
      }
    }
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component with shrink:true 1`] = `
<Fragment>
  <TextField
    InputLabelProps={
      Object {
        "id": "undefined-label",
        "shrink": true,
      }
    }
    error={false}
    floatingLabelText="This is a test textfield component"
    floatinglabelfixed={true}
    fullWidth={true}
    inputProps={
      Object {
        "aria-labelledby": "undefined-label",
      }
    }
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;
